; ModuleID = '/home/carl/AnghaBench/zfs/tests/zfs-tests/tests/functional/ctime/extr_ctime.c_cleanup.c'
source_filename = "/home/carl/AnghaBench/zfs/tests/zfs-tests/tests/functional/ctime/extr_ctime.c_cleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@tfile = common dso_local global i32 0, align 4
@F_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @cleanup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cleanup() #0 {
  %1 = load i32, i32* @tfile, align 4
  %2 = call i64 @strlen(i32 %1)
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %4, label %12

4:                                                ; preds = %0
  %5 = load i32, i32* @tfile, align 4
  %6 = load i32, i32* @F_OK, align 4
  %7 = call i64 @access(i32 %5, i32 %6)
  %8 = icmp eq i64 %7, 0
  br i1 %8, label %9, label %12

9:                                                ; preds = %4
  %10 = load i32, i32* @tfile, align 4
  %11 = call i32 @unlink(i32 %10)
  br label %12

12:                                               ; preds = %9, %4, %0
  ret void
}

declare dso_local i64 @strlen(i32) #1

declare dso_local i64 @access(i32, i32) #1

declare dso_local i32 @unlink(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
